--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-All the details of the project with respected steps and codes regarding FOTA will be updated here :)
+Hi Welcome to My Git Repository. Here i will be pushing my projects which may be helpful to anyone who is working on the same project.
